# sok-graph-visualizer

./: README.md  pyproject.toml  run.sh  setup.sh  start_servers.sh
sample_data/: graph.json
sok-graph-visualizer/api/: setup.py
sok-graph-visualizer/api/model/: Graph.py
sok-graph-visualizer/api/model/abstract/: Node.py
sok-graph-visualizer/api/service/: DataVisualizerService.py
sok-graph-visualizer/simple_visualizer/src/templates/: simple.jinja
sok-graph-visualizer/test/simple_visualizer/: example_usage.py
sok_graph_visualizer/: .gitignore  cli_debug.py  requirements.txt
sok_graph_visualizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sok_graph_visualizer/api/: pyproject.toml
sok_graph_visualizer/api/model/: Edge.py  Graph.py
sok_graph_visualizer/api/service/: DataSourceService.py  DataVisualizerService.py
sok_graph_visualizer/block_visualizer/: pyproject.toml  setup.py
sok_graph_visualizer/block_visualizer/src/: block_visualizer.py
sok_graph_visualizer/block_visualizer/src/templates/: block.jinja  block_directed.jinja
sok_graph_visualizer/core/: README.md  pyproject.toml  setup.py
sok_graph_visualizer/core/src/: app.py
sok_graph_visualizer/core/src/cli/: cli_parser.py  cli_terminal.py
sok_graph_visualizer/core/src/commands/: command.py  command_names.py  command_processor.py  filter_command.py  search_command.py  workspace_commands.py
sok_graph_visualizer/core/src/commands/graph_commands/: clear_graph_command.py  create_edge_command.py  create_node_command.py  delete_edge_command.py  delete_node_command.py  edit_edge_command.py  edit_node_command.py
sok_graph_visualizer/core/src/graph_query/: graph_query_service.py
sok_graph_visualizer/core/src/use_cases/: plugin_recognition.py  render_service.py  workspace_context.py  workspace_service.py
sok_graph_visualizer/core/src/web/static/css/: style.css
sok_graph_visualizer/core/src/web/static/js/: birdView.js  main.js  mainView.js  tree.js  workspace.js
sok_graph_visualizer/core/src/web/templates/: base.html  index.html  workspace.html
sok_graph_visualizer/core/src/workspace/: __init__.py  operation.py  workspace.py  workspace_manager.py
sok_graph_visualizer/django/: .gitignore  README.md  manage.py  pyproject.toml
sok_graph_visualizer/django/graph_visualizer/: apps.py  urls.py  views.py
sok_graph_visualizer/django/graph_visualizer/templatetags/: shared_filters.py
sok_graph_visualizer/django/sites/: asgi.py  settings.py  urls.py  views.py  wsgi.py
sok_graph_visualizer/django/webshop/: urls.py  views.py
sok_graph_visualizer/django/webshop/templatetags/: __init__.py
sok_graph_visualizer/flask/: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.py
sok_graph_visualizer/json_data_source/: pyproject.toml
sok_graph_visualizer/json_data_source/src/: implementation.py  service.py
sok_graph_visualizer/platform/: README.md
sok_graph_visualizer/platform/cli/: cli_command.py  cli_executor.py  cli_parser.py  cli_terminal.py
sok_graph_visualizer/platform/src/app/: app.py
sok_graph_visualizer/platform/src/render/: render_service.py
sok_graph_visualizer/platform/src/workspace/: operation.py  workspace.py
sok_graph_visualizer/rdf_datasource/: pyproject.toml
sok_graph_visualizer/rdf_datasource/data/: graph.ttl
sok_graph_visualizer/rdf_datasource/src/: implementation.py  services.py  utils.py
sok_graph_visualizer/simple_visualizer/: pyproject.toml  setup.py
sok_graph_visualizer/simple_visualizer/src/: simple_visualizer.py
sok_graph_visualizer/simple_visualizer/src/templates/: simple.jinja  simple_directed.jinja
sok_graph_visualizer/test/block_visualizer/: run_block_visualizer.py
sok_graph_visualizer/test/cli/: test_cli.py
sok_graph_visualizer/test/data/: test_graph.json
sok_graph_visualizer/test/json_data_source/: test_json_plugin.py
sok_graph_visualizer/test/plugin_recognition/: test_plugin_manager.py
sok_graph_visualizer/test/render/: test_render_service.py
sok_graph_visualizer/test/simple_visualizer/: graph_visualization.html
sok_graph_visualizer/test/workspace/: test_workspace.py  test_workspace_commands.py
sok_graph_visualizer/test/xml_datasource/: test_xml_plugin.py
sok_graph_visualizer/xml_datasource/: pyproject.toml
sok_graph_visualizer/xml_datasource/data/: graph.xml  graph1.xml
sok_graph_visualizer/xml_datasource/src/: implementation.py  service.py
