[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "API library for Graph Visualization Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "typing-extensions>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
