[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-platform"
version = "0.1.0"
description = "Core platform for Graph Visualization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "graph-api>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
