[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-graph-visualizer"
version = "0.1.0"
description = "Django web application for SOK Graph Visualizer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "Django>=4.2",
    "core>=0.1.0",
    "Jinja2>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
