[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-graph-visualizer"
version = "0.1.0"
description = "Flask web application for SOK Graph Visualizer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "Flask>=2.0",
    "core>=0.1.0",
    "Jinja2>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
