[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json-datasource"
version = "0.1.0"
description = "JSON data source plugin for Graph Visualization Platform"
requires-python = ">=3.8"
dependencies = [
    "api",
]
license = {text = "MIT"}

[project.entry-points."graph.data_source"]
json_datasource = "sok_graph_visualizer.json_data_source.src.implementation:JsonDataSourcePlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
