[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdf-datasource"
version = "0.1.0"
description = "RDF data source plugin for Graph Visualization Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "api>=0.1.0",
]

[project.entry-points."graph.data_source"]
rdf_datasource = "sok_graph_visualizer.rdf_datasource.src.implementation:RDFDataSourcePlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
