[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-visualizer"
version = "0.1.0"
description = "Simple HTML visualizer plugin for Graph Visualization Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "api>=0.1.0",
    "Jinja2>=3.0",
]

[project.entry-points."graph.visualizer"]
simple_visualizer = "sok_graph_visualizer.simple_visualizer.src.simple_visualizer:SimpleVisualizer"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
